// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select snapshots should render Select 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select Select--light"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField TextField--light"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldLabel TextFieldLabel--light TextFieldLabel--outlined TextFieldLabel--outlined--light"
        data-test-box=""
      >
        <input
          class="TextFieldLabel__input TextFieldLabel__input--light"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="0"
        />
        <div
          class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions SelectOptions--light"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem SelectItem--light SelectItem--selected SelectItem--selected--light"
        data-test-box=""
        data-test-select-item="0"
        data-value="0"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light SelectItem__checkIcon--selected SelectItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        0
      </li>
      <li
        class="css-1jnxvbp SelectItem SelectItem--light"
        data-test-box=""
        data-test-select-item="1"
        data-value="1"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        1
      </li>
      <li
        class="css-1jnxvbp SelectItem SelectItem--light"
        data-test-box=""
        data-test-select-item="2"
        data-value="2"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        2
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshots should render when mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select Select--light"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField TextField--light"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldLabel TextFieldLabel--light TextFieldLabel--outlined TextFieldLabel--outlined--light"
        data-test-box=""
      >
        <input
          class="TextFieldLabel__input TextFieldLabel__input--light"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="Mixed"
        />
        <div
          class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions SelectOptions--light"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem SelectItem--light"
        data-test-box=""
        data-test-select-item="0"
        data-value="0"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        0
      </li>
      <li
        class="css-1jnxvbp SelectItem SelectItem--light"
        data-test-box=""
        data-test-select-item="1"
        data-value="1"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        1
      </li>
      <li
        class="css-1jnxvbp SelectItem SelectItem--light"
        data-test-box=""
        data-test-select-item="2"
        data-value="2"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        2
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshots should render with no options 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select Select--light"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField TextField--light"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldLabel TextFieldLabel--light TextFieldLabel--outlined TextFieldLabel--outlined--light"
        data-test-box=""
      >
        <input
          class="TextFieldLabel__input TextFieldLabel__input--light"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="0"
        />
        <div
          class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions SelectOptions--light"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem SelectItem--light SelectItem--disabled SelectItem--disabled--light"
        data-test-box=""
        data-test-select-item="-1"
        data-value=""
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        No options
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshots should render with one option 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select Select--light"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField TextField--light"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldLabel TextFieldLabel--light TextFieldLabel--outlined TextFieldLabel--outlined--light"
        data-test-box=""
      >
        <input
          class="TextFieldLabel__input TextFieldLabel__input--light"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="0"
        />
        <div
          class="css-1jnxvbp Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions SelectOptions--light"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem SelectItem--light SelectItem--selected SelectItem--selected--light"
        data-test-box=""
        data-test-select-item="0"
        data-value="0"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__checkIcon SelectItem__checkIcon--light SelectItem__checkIcon--selected SelectItem__checkIcon--selected--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        0
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
